--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <title>準いつメンズ予定一覧</title>
-<img src="https://github.com/tanukichi5000/itsumenzuyotei/blob/main/スクリーンショット%202021-08-15%2020.27.32.png?raw=true" width="150" height="50" alt="シロクマ シネマズ">
+<img src="https://github.com/tanukichi5000/itsumenzuyotei/blob/main/スクリーンショット%202021-08-15%2020.27.32.png?raw=true" width="150" height="50" alt="ロゴが上手く表示できません。ページを再読み込みしてください。">
 <center><h1>予定一覧</h1></center>
 <center><table border="1">
     <tbody><tr>
@@ -8,4 +8,4 @@
       </tr>
       <tr>
         <td><h3>2022年度夏休み</h3></td>
-        <td><a href="https://tanukichi5000.github.io/itsumenzuyotei/2022.html"><img src="https://github.com/tanukichi5000/itsumenzuyotei/blob/main/スクリーンショット%202021-08-15%2020.54.34.png?raw=true" width="100%" alt="アンケート" height="100%"></a></td></center>
+        <td><a href="https://tanukichi5000.github.io/itsumenzuyotei/2022.html"><img src="https://github.com/tanukichi5000/itsumenzuyotei/blob/main/スクリーンショット%202021-08-15%2020.54.34.png?raw=true" width="100%" alt="画像が上手く表示できません。ページを再読み込みしてください。" height="100%"></a></td></center>
