--- a/index.html
+++ b/index.html
@@ -1,5 +1,12 @@
 <title>準いつメンズ予定一覧</title>
 <img src="https://github.com/tanukichi5000/itsumenzuyotei/blob/main/スクリーンショット%202021-08-15%2020.27.32.png?raw=true" width="150" height="50" alt="ロゴが上手く表示できません。ページを再読み込みしてください。">
+<br><details> <summary><strong>準いつメンズ公式SNS</strong></summary>
+<ul>
+  <li><h3><a href="https://lin.ee/t7e67GS">公式LINE</a></h3></li>
+  <li><h3><a href="https://twitter.com/sirokuma_c">公式Twitter</a></h3></li>
+  <li>公式Instagram→設定中</li>  
+</ul>
+</details><br>
 <center><h1>予定一覧</h1></center>
 <center><table border="1">
     <tbody><tr>
@@ -9,4 +16,3 @@
       <tr>
         <td><h3>2022年度夏休み</h3></td>
         <td><a href="https://tanukichi5000.github.io/itsumenzuyotei/2022.html"><img src="https://github.com/tanukichi5000/itsumenzuyotei/blob/main/スクリーンショット%202021-08-15%2020.54.34.png?raw=true" width="100%" alt="画像が上手く表示できません。ページを再読み込みしてください。" height="100%"></a></td></center>
-<br><h3><a href="https://twitter.com/sirokuma_c">公式Twitter</a></h3>
