--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <title>準いつメンズ予定一覧</title>
 <img src="https://github.com/tanukichi5000/itsumenzuyotei/blob/main/スクリーンショット%202021-08-15%2020.27.32.png?raw=true" width="150" height="50" alt="ロゴが上手く表示できません。ページを再読み込みしてください。">
-<br><h3>インフォメーション</h3><br><br><details> <summary><strong>準いつメンズ公式SNS</strong></summary>
+<br><h2>⭐️インフォメーション</h2><br><details> <summary><strong>準いつメンズ公式SNS</strong></summary>
 <ul>
   <li><h3><a href="https://lin.ee/t7e67GS">公式LINE</a></h3></li>
   <li><h3><a href="https://twitter.com/sirokuma_c">公式Twitter</a></h3></li>
