--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <ul>
   <li><h3><a href="https://lin.ee/t7e67GS">公式LINE</a></h3></li>
   <li><h3><a href="https://twitter.com/sirokuma_c">公式Twitter</a></h3></li>
-  <li>公式Instagram→設定中</li>  
+  <li><h3><a href="https://www.instagram.com/thubukichi.mochi/?hl=ja">公式Instagram</a></h3></li>  
 </ul>
 </details><br>
 <center><h1>予定一覧</h1></center>
