--- a/2022.html
+++ b/2022.html
@@ -1,1 +1,6 @@
-<center><font face="Impact"><h1>行き先：ナガシマジャンボ海水プール</h1></center>
+<center><font face="Impact"><h1>行き先：ナガシマジャンボ海水プール
+  <br>日付：未定
+  <br>集合時間：未定
+  <br>持ち物：財布（必要最低資金→¥10000以上）、スマホ、水着、etc...
+  <br>メンバー：未定</h1></font></center>
+<center>後日、順次更新予定</center>
