--- a/2022.html
+++ b/2022.html
@@ -3,5 +3,6 @@
   <br>日付：未定
   <br>集合時間：未定
   <br>持ち物：財布（必要最低資金→¥10000以上）、スマホ、水着、etc...
-  <br>メンバー：未定</h1></font></center>
+  <br>メンバー：未定
+  <br>集合場所：未定</h1></font></center>
 <center>後日、順次更新予定</center>
