--- a/404.html
+++ b/404.html
@@ -1,2 +1,3 @@
 <title>404ページ</title>
+<center><img src="https://github.com/tanukichi5000/itsumenzuyotei/blob/main/スクリーンショット%202021-08-15%2020.27.32.png?raw=true"></center>
 <center><h1>ページが見つかりません</h1><center>
